
project('uds', 'c',
        version : '0.0.1',
        license : 'MIT',
        default_options: ['buildtype=debugoptimized',
                          'default_library=shared',
                          'warning_level=2'])

incdir = include_directories('include')

subdir('include')
subdir('lib')
subdir('example')
